--- a/css/typography.css
+++ b/css/typography.css
@@ -1,25 +1,20 @@
 /* ========================================================================
    Component: Typography
  ========================================================================== */
-@font-face {
-  font-family: 'Campton Bold';
-  src: url('../fonts/campton/Campton-BoldDEMO.otf');
-}
-@font-face {
-  font-family: 'Campton Light';
-  src: url('../fonts/campton/Campton-LightDEMO.otf');
-}
+@import url('https://fonts.googleapis.com/css?family=Oswald|Roboto:300');
+
 html {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
 }
 body {
     font-size: 16px;
 }
 h2, h3, h4, h5, h6, .bold-text {
-    font-family: "Campton Bold", sans-serif;
+font-family: 'Oswald', sans-serif;
 }
 h1, .light-text {
-    font-family: "Campton Light";
+font-family: 'Oswald', sans-serif;
 }
 header p {
     font-size: 18px;
