--- a/css/main.css
+++ b/css/main.css
@@ -1788,5 +1788,5 @@ header .logo-container
     font-size: 48px !important; 
 }
 .limited {
-    color: #e74c3c;
+    color: #e74c3c !important;;
 }
